testing/error/wrongnumrotors.inp
* B BETA I II AAA
ILBDA AMTAZ
